Scrollbars fixed

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Open Sans', Arial, sans-serif;
+    overflow: hidden;
 }
 
 .wrap {
